--- a/src/main/webapp/sistema/Voluntario/cadastrarEvento.xhtml
+++ b/src/main/webapp/sistema/Voluntario/cadastrarEvento.xhtml
@@ -37,9 +37,7 @@
 							for="inputText-responsavel" />
 						<p:inputText id="inputText-responsavel" style="width:100%"
 							maxlength="80"
-							value="#{eventoController.eventoModel.nomeResponsavel}"
-							required="true"
-							requiredMessage="O campo responsavel é de preenchimento obrigatório" />
+							value="#{eventoController.eventoModel.nomeResponsavel}" />
 
 						<p:outputLabel value="Local do evento" for="inputText-local" />
 						<p:inputText id="inputText-local" style="width:100%"
@@ -66,21 +64,22 @@
 						<p:outputLabel value="Causas" />
 						<p:selectManyCheckbox id="basic"
 							value="#{eventoController.eventoModel.causas}" layout="grid"
-							columns="2">
-							<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
-							<f:selectItem itemLabel="Saude" itemValue="1" />
-							<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
-							<f:selectItem itemLabel="Participação cidada" itemValue="3" />
-							<f:selectItem itemLabel="Meio Ambiente" itemValue="4" />
-							<f:selectItem itemLabel="Idosos" itemValue="5" />
-							<f:selectItem itemLabel="Educação" itemValue="6" />
-							<f:selectItem itemLabel="Defesa de direitos" itemValue="7" />
-							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte" itemValue="8" />
-							<f:selectItem itemLabel="Crianças/Jovens" itemValue="9" />
-							<f:selectItem itemLabel="Consumo Consciente" itemValue="10" />
-							<f:selectItem itemLabel="Capacitação Profissional" itemValue="11" />
-							<f:selectItem itemLabel="Combate à pobreza" itemValue="12" />
-							<f:selectItem itemLabel="Outras" itemValue="13" />
+							columns="2" required="true"
+							requiredMessage="O campo Causas é de preenchimento obrigatório" >
+						<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
+						<f:selectItem itemLabel="Saude" itemValue="1" />
+						<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
+						<f:selectItem itemLabel="Participação cidada" itemValue="3" />
+						<f:selectItem itemLabel="Meio Ambiente" itemValue="4" />
+						<f:selectItem itemLabel="Idosos" itemValue="5" />
+						<f:selectItem itemLabel="Educação" itemValue="6" />
+						<f:selectItem itemLabel="Defesa de direitos" itemValue="7" />
+						<f:selectItem itemLabel="Cultura, Esporte e/ou Arte" itemValue="8" />
+						<f:selectItem itemLabel="Crianças/Jovens" itemValue="9" />
+						<f:selectItem itemLabel="Consumo Consciente" itemValue="10" />
+						<f:selectItem itemLabel="Capacitação Profissional" itemValue="11" />
+						<f:selectItem itemLabel="Combate à pobreza" itemValue="12" />
+						<f:selectItem itemLabel="Outras" itemValue="13" />
 						</p:selectManyCheckbox>
 
 						<p:commandButton value="Salvar" id="commandButton-salvar"
