--- a/src/main/webapp/cadastrarONG.xhtml
+++ b/src/main/webapp/cadastrarONG.xhtml
@@ -30,7 +30,7 @@
 							requiredMessage="O campo usuario é de preenchimento obrigatório" />
 
 						<p:outputLabel value="Senha" for="inputText-senha" />
-						<p:inputText id="inputText-senha" style="width:90%" maxlength="70"
+						<p:password id="inputText-senha" style="width:90%" maxlength="70"
 							value="#{ongController.ongModel.usuarioEntity.senha}"
 							required="true"
 							requiredMessage="O campo senha é de preenchimento obrigatório" />
@@ -64,9 +64,10 @@
 							requiredMessage="O email é de preenchimento obrigatório" />
 
 						<p:outputLabel value="Telefone" for="inputText-telefone" />
-						<p:inputText id="inputText-telefone" style="width:100%"
+						<p:inputMask id="inputText-telefone" style="width:100%"
 							maxlength="80" value="#{ongController.ongModel.telefone}"
 							required="true"
+							 mask="(99) 99999-9999"
 							requiredMessage="O campo telefone é de preenchimento obrigatório" />
 
 						<p:separator />
@@ -88,8 +89,9 @@
 							maxlength="200" value="#{ongController.ongModel.complemento}" />
 
 						<p:outputLabel value="CEP" for="inputText-cep" />
-						<p:inputText id="inputText-cep" style="width:100%" maxlength="200"
+						<p:inputMask id="inputText-cep" style="width:100%" maxlength="200"
 							value="#{ongController.ongModel.cep}" required="true"
+							mask="99999-999"
 							requiredMessage="O campo cep é de preenchimento obrigatório" />
 
 						<p:outputLabel value="Cidade" for="inputText-cidade" />
