--- a/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
@@ -10,7 +10,7 @@
 <h:head>
 </h:head>
 
-<ui:composition template="/template/ONG/layoutBase.xhtml">
+<ui:composition template="/template/Voluntario/layoutBase.xhtml">
 	<ui:define name="content">
 		<h:form id="form">
 
@@ -77,8 +77,7 @@
 						<h:outputText value="#{consultaVagasView.selectedVaga.d}"
 							style="font-weight: bold" />
 
-						<p:button value="Editar"
-							disabled="#{!(consultaVagasView.botaoEditar)}">
+						<p:button value="Tenho Interesse">
 						</p:button>
 
 					</p:panelGrid>
