--- a/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
@@ -17,7 +17,7 @@
 			<p:dataGrid value="#{consultaVagasView.vagas}" var="vaga" columns="3"
 				layout="grid" rows="5" paginator="true" style="margin-top:20px">
 
-				<f:facet name="header"> vagas </f:facet>
+				<f:facet name="header"> Vagas </f:facet>
 
 				<p:panel>
 					<h:panelGrid columns="1" style="width:100%;">
