--- a/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
@@ -23,15 +23,15 @@
 
 						<p:outputLabel value="Nome" for="inputText-nome" />
 						<p:inplace id="inputText-nome">
-							<p:inputText value="#{voluntarioController.voluntarioModel.nome}"/>
+							<p:inputText value="#{voluntarioController.voluntarioModel.nome}" />
 						</p:inplace>
 						<p:outputLabel />
 
 						<p:outputLabel value="Sobrenome" for="inputText-sobrenome" />
 						<p:inplace id="inputText-sobrenome">
-							<p:inputText value="#{voluntarioController.voluntarioModel.sobrenome}"/>
+							<p:inputText
+								value="#{voluntarioController.voluntarioModel.sobrenome}" />
 						</p:inplace>
-				
 
 						<p:outputLabel for="selectOneRadio-sexo" value="Sexo:" />
 						<p:selectOneRadio id="selectOneRadio-sexo"
