--- a/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
@@ -70,7 +70,7 @@
 						<h:outputText value="#{consultaEventosView.selectedEvento.local}"
 							style="font-weight: bold" />
 
-						<h:outputText value="Local:" />
+						<h:outputText value="Causas" />
 						<h:outputText
 							value="#{consultaEventosView.selectedEvento.causasString}"
 							style="font-weight: bold" />
